--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -11,6 +11,7 @@
       float: right;
       color: #666;
       vertical-align: middle;
+      line-height: 2.2rem;
       font-size: 0.9em;
       .fa {
         margin-right: 0.3em;
