Improve script page and login

--- a/src/components/style/CommentCard.scss
+++ b/src/components/style/CommentCard.scss
@@ -48,6 +48,7 @@
     & > .container {
       margin-right: 1em;
     }
+    border-bottom: none;
   }
   & > .actions {
     // WHAT THE ACTUAL F**K.
