--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -108,6 +108,7 @@
   }
   &>.footer {
     font-size: 0.9em;
+    line-height: 1.3em;
     text-align: right;
     overflow: hidden;
     white-space: nowrap;
@@ -150,6 +151,7 @@
       margin: 0.1em;
       font-size: 0.9em;
       box-sizing: border-box;
+      line-height: 1.3em;
       .tooltip {
         display: inline-block;
         max-width: 100%;
