--- a/src/components/ui/style/Alert.scss
+++ b/src/components/ui/style/Alert.scss
@@ -6,6 +6,7 @@
   margin: 0.5em 0.3em;
   border-radius: 0.2em;
   border: 1px solid #FFD1D1;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   text-align: center;
+  font-weight: normal;
 }
