Implement entry list or script selection

--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -67,8 +67,9 @@ html {
     text-align: right;
     button {
       width: auto;
-      padding-left: 3em;
-      padding-right: 3em;
+      padding-left: 2em;
+      padding-right: 2em;
+      margin: 0.4em 0.2em;
     }
   }
 }
