--- a/src/components/style/TagSelect.scss
+++ b/src/components/style/TagSelect.scss
@@ -36,7 +36,6 @@
   }
   .tag-entry {
     cursor: pointer;
-    padding: 0.3em 0.4em;
     border-radius: 0.2em;
     box-sizing: border-box;
     padding: 0.4em;
@@ -48,16 +47,23 @@
     box-sizing: border-box;
     line-height: 1.3em;
     color: #333;
+    vertical-align: middle;
     &:hover {
       border: 1px solid #AECBEB;
       background-color: #FAFCFF;
+    }
+    .fa {
+      margin-left: 0.3em;
+      font-size: 0.8em;
+      color: #666;
+      vertical-align: middle;
     }
   }
   .input > input {
     display: inline;
     margin: 0.1em;
     margin-right: 0.2em;
-    padding: 0.4em;
+    padding: 0.3em;
     border: 1px solid transparent;
     width: auto;
   }
