Implement setting locale. Resolves #68.

--- a/src/components/ui/style/LabelInput.scss
+++ b/src/components/ui/style/LabelInput.scss
@@ -11,4 +11,19 @@
       display: block;
     }
   }
+  &.oneline {
+    &>label {
+      &>.label {
+        display: inline-block;
+        margin-right: 0.5em;
+        vertical-align: middle;
+        min-width: 6em;
+        text-align: right;
+      }
+      &>.field {
+        display: inline-block;
+        vertical-align: middle;
+      }
+    }
+  }
 }
