--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -69,39 +69,57 @@
       }
     }
   }
-  &>.script {
-    max-width: 40rem;
-    margin: 1.5rem auto;
-    margin-bottom: 0.4rem;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 0.3rem;
-    // padding: 0.6rem 0.8rem;
-    box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-    &>pre {
-      margin: 0;
+  &>.script-section {
+    &>.script {
+      max-width: 40rem;
+      margin: 1.5rem auto;
+      margin-bottom: 0.4rem;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 0.3rem;
+      // padding: 0.6rem 0.8rem;
+      box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.5);
+      overflow: hidden;
+      &>pre {
+        margin: 0;
+      }
+      .hljs {
+        padding: 0.6rem 0.8rem;
+        min-height: 10rem;
+        max-width: 100%;
+        max-height: 40rem;
+        overflow: auto;
+      }
+      .ace_editor {
+        margin: 0;
+        border: none;
+      }
     }
-    .hljs {
-      padding: 0.6rem 0.8rem;
-      min-height: 10rem;
-      max-width: 100%;
-      max-height: 40rem;
-      overflow: auto;
-    }
-    .ace_editor {
-      margin: 0;
-      border: none;
+    &>.script-download {
+      text-align: right;
+      margin-bottom: 1.5em;
+      a {
+        color: #666;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
-  &>.script-download {
-    text-align: right;
-    margin-bottom: 1.5em;
-    a {
-      color: #666;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
+  &>.list-section {
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+    box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.5);
+    margin: 1em 0;
+    &>.entry-mini-card {
+      margin: 0;
+      border: 0;
+      border-radius: 0;
+      box-shadow: none;
+      border-bottom: 1px solid #ccc;
+      &:last-child {
+        border-bottom: none;
       }
     }
   }
