--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -11,7 +11,7 @@
       float: right;
       color: #666;
       vertical-align: middle;
-      line-height: 2.2rem;
+      line-height: 1;
       font-size: 0.9em;
       .fa {
         margin-right: 0.3em;
@@ -21,33 +21,30 @@
         display: inline-block;
         width: auto;
         vertical-align: middle;
-        height: 2.2em;
-        padding: 0 0.6em;
+        line-height: 1;
+        padding: 0.5em 0.6em;
         margin: 0 0.3em;
       }
       &>.stars {
+        display: inline-block;
+        border-radius: 0.2em;
+        border: 1px solid #94BDEB;
         button {
+          border-radius: 0.2em;
           border-top-right-radius: 0;
           border-bottom-right-radius: 0;
           margin: 0;
+          border: none;
+          border-right: 1px solid #94BDEB;
         }
         &>.state {
-          box-sizing: border-box;
-          border-radius: 0.2em;
-          border-top-left-radius: 0;
-          border-bottom-left-radius: 0;
-          font-size: 1em;
           color: #555;
-          background-color: #FFFFFF;
           display: inline-block;
-          line-height: 2.2em;
-          padding: 0 0.8em;
-          border: 1px solid #94BDEB;
-          border-left: none;
-          height: 2.2em;
+          padding: 0.5em 0.8em;
           vertical-align: middle;
         }
         &.raw {
+          border: none;
           vertical-align: middle;
           padding-right: 0.3em;
         }
