--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -46,7 +46,7 @@
         &.raw {
           border: none;
           vertical-align: middle;
-          padding-right: 0.3em;
+          padding: 0.5em 0.3em;
         }
       }
     }
