--- a/src/components/style/Header.scss
+++ b/src/components/style/Header.scss
@@ -77,6 +77,11 @@ header {
       padding: 0;
       margin: 0 0.5em;
     }
+    .dropdown > .content {
+      a {
+        margin: 0;
+      }
+    }
     .profile {
       width: 2.2em;
       height: 2.2em;
