--- a/src/components/ui/style/DropDownMenu.scss
+++ b/src/components/ui/style/DropDownMenu.scss
@@ -59,7 +59,7 @@
   &>.arrow:after {
     @include arrowTop($TRIANGLE_SIZE, #fff);
     margin-top: 1px;
-    z-index: 11;
+    z-index: 41;
   }
   &>.content {
     position: absolute;
@@ -68,12 +68,12 @@
     text-align: left;
     background-color: #fff;
     color: #000;
-    padding: 0.5em 0;
+    padding: 0;
     border: 1px solid #999;
     margin-top: $TRIANGLE_SIZE;
     border-radius: 3pt;
     box-sizing: border-box;
-    z-index: 10;
+    z-index: 40;
     box-shadow: 0 2px 4px -2px #000;
     min-width: 100%;
     line-height: 1em;
