--- a/src/components/style/Footer.scss
+++ b/src/components/style/Footer.scss
@@ -5,6 +5,13 @@ footer {
   .container {
     border-top: 1px solid #ccc;
     text-align: center;
-    padding: 1.5em;
+    padding: 0.5em;
+    a {
+      color: #666;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
