Remove README text

--- a/src/views/style/Settings.scss
+++ b/src/views/style/Settings.scss
@@ -87,6 +87,7 @@ $break-small: 500pt;
       font-weight: bold;
       margin: 0;
       padding: 0.8rem 1rem;
+      padding-bottom: 0;
       color: #333;
       //background-color: #f9f9f9;
       //border-bottom: 1px solid #ccc;
