--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -3,13 +3,13 @@ html, body, #root {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: Noto Sans CJK KR, Noto Sans, 나눔고딕, NanumGothic,
-   맑은 고딕, 돋움, Dotum, sans-serif;
+  font-family: 나눔바른고딕, 나눔고딕, NanumGothic,
+    맑은 고딕, 돋움, Dotum, Arial, Helvetica, sans-serif;
 }
 
 button, input, textarea {
-  font-family: Noto Sans CJK KR, Noto Sans, 나눔고딕, NanumGothic,
-   맑은 고딕, 돋움, Dotum, sans-serif;
+  font-family: 나눔바른고딕, 나눔고딕, NanumGothic,
+    맑은 고딕, 돋움, Dotum, Arial, Helvetica, sans-serif;
 }
 
 html {
