--- a/src/components/ui/style/DropDownMenu.scss
+++ b/src/components/ui/style/DropDownMenu.scss
@@ -68,7 +68,7 @@
     text-align: left;
     background-color: #fff;
     color: #000;
-    padding: 0;
+    padding: 0.5em 0;
     border: 1px solid #999;
     margin-top: $TRIANGLE_SIZE;
     border-radius: 3pt;
