--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -15,6 +15,9 @@
       margin: 0;
       box-shadow: none;
       border-bottom: 1px solid #ccc;
+      &.noborder {
+        border-bottom: none;
+      }
     }
     &>.actions {
       text-align: right;
